MV_IN_RANGE: all ordered types, null-robust, pushdown, full tests
Expand mv_in_range from int/long/double to every ordered type (adds
unsigned_long, date, date_nanos, ip, version, keyword, text) via a single
bytes_ref evaluator plus the long path, mirroring mv_min's type matrix.

Harden the contract per an adversarial review:
- bounds must share the field's type (resolveType), so no evaluator ever
  casts across block types;
- a null field or a null bound folds to constant false, keeping the
  two-valued (never-null) contract;
- take the bounds as blocks in the evaluators so a runtime-null or
  multivalued bound yields false instead of reading a stray slot.

Reuse Range's per-type bound formatting for the Lucene RangeQuery pushdown
instead of duplicating it. Add MvInRangeSerializationTests and
MvInRangeErrorTests, extend MvInRangeTests across all types with the
element-wise pin, and add csv-spec cases for the null/empty/NOT semantics.
Drop the redundant FN_MV_IN_RANGE capability (the registry auto-registers
fn_mv_in_range).